<resources>
    <string name="app_name">OnTheWay</string>
    <string name="search_btn">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="zomato_api_key">2d2a34658d021cd4d5c2bfc0275e07e4</string>
    <string name="toLocation">Enter destination..</string>
    <string name="fromLocation">Enter source..</string>
    <string name="currentLocation">Current location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="service_not_available">Service not available!</string>
    <string name="invalid_lat_long_used">Lat/Long values retrieved are invalid!</string>
    <string name="no_address_found">No address found for current location.</string>
    <string name="address_found">Address found</string>
    <string name="cuisine_textView">Cuisine</string>
    <string name="content_authority">com.example.mynanodegreeapps.ontheway.provider</string>
    <string name="title_cuisine">Cuisines</string>
    <string name="action_apply">Apply</string>
    <string name="action_filterselect">Filter</string>
    <string name="filter_title">Filter</string>
    <string name="underfivehundred">0 - 500</string>
    <string name="underthousand">500-1000</string>
    <string name="underfifteenhundred">1000-1500</string>
    <string name="undertwothousand">2000+</string>

    <string name="costForTwoFilter">cost for two filter</string>
    <string name="onlineDeliveryFilter">online delivery filter</string>

    <string name="homeFilter">go back to home filters</string>

    <string name="searchHistory">Search History</string>
    <string name="hyphen">TO</string>
</resources>
