<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/offWhite"
    tools:context="com.example.mynanodegreeapps.ontheway.CostForTwoFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/homeFilter"
        style="@style/FilterStyle"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:src="@drawable/home"
        android:scaleType="fitCenter"
        android:contentDescription="@string/homeFilter"
        android:elevation="4dp"
        />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/underfivehundred"
            style="@style/FilterStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/underfivehundred"
            android:contentDescription="@string/underfivehundred"
            />
        <TextView
            android:id="@+id/underthousand"
            style="@style/FilterStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/underthousand"
            android:contentDescription="@string/underthousand"
            />
        <TextView
            android:id="@+id/underfifteenhundred"
            style="@style/FilterStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/underfifteenhundred"
            android:contentDescription="@string/underfifteenhundred"
            />

        <TextView
            android:id="@+id/abovetwothousand"
            style="@style/FilterStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/undertwothousand"
            android:contentDescription="@string/undertwothousand"
            />
        </LinearLayout>
    </HorizontalScrollView>


</LinearLayout>
